
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int ndigits; scalar_t__* digits; int weight; int rscale; int dscale; scalar_t__* buf; } ;
typedef TYPE_1__ numeric ;
typedef scalar_t__ NumericDigit ;


 int Max (int,int) ;
 scalar_t__* digitbuf_alloc (int) ;
 int digitbuf_free (scalar_t__*) ;

__attribute__((used)) static int
sub_abs(numeric *var1, numeric *var2, numeric *result)
{
 NumericDigit *res_buf;
 NumericDigit *res_digits;
 int res_ndigits;
 int res_weight;
 int res_rscale;
 int res_dscale;
 int i,
    i1,
    i2;
 int borrow = 0;


 int var1ndigits = var1->ndigits;
 int var2ndigits = var2->ndigits;
 NumericDigit *var1digits = var1->digits;
 NumericDigit *var2digits = var2->digits;

 res_weight = var1->weight;
 res_rscale = Max(var1->rscale, var2->rscale);
 res_dscale = Max(var1->dscale, var2->dscale);
 res_ndigits = res_rscale + res_weight + 1;
 if (res_ndigits <= 0)
  res_ndigits = 1;

 if ((res_buf = digitbuf_alloc(res_ndigits)) == ((void*)0))
  return -1;
 res_digits = res_buf;

 i1 = res_rscale + var1->weight + 1;
 i2 = res_rscale + var2->weight + 1;
 for (i = res_ndigits - 1; i >= 0; i--)
 {
  i1--;
  i2--;
  if (i1 >= 0 && i1 < var1ndigits)
   borrow += var1digits[i1];
  if (i2 >= 0 && i2 < var2ndigits)
   borrow -= var2digits[i2];

  if (borrow < 0)
  {
   res_digits[i] = borrow + 10;
   borrow = -1;
  }
  else
  {
   res_digits[i] = borrow;
   borrow = 0;
  }
 }

 while (res_ndigits > 0 && *res_digits == 0)
 {
  res_digits++;
  res_weight--;
  res_ndigits--;
 }
 while (res_ndigits > 0 && res_digits[res_ndigits - 1] == 0)
  res_ndigits--;

 if (res_ndigits == 0)
  res_weight = 0;

 digitbuf_free(result->buf);
 result->ndigits = res_ndigits;
 result->buf = res_buf;
 result->digits = res_digits;
 result->weight = res_weight;
 result->rscale = res_rscale;
 result->dscale = res_dscale;

 return 0;
}
